--- a/FrontEnd-FitWell/src/app/components/nav-bar/nav-bar.component.scss
+++ b/FrontEnd-FitWell/src/app/components/nav-bar/nav-bar.component.scss
@@ -43,7 +43,7 @@
   display: none;
 }
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 900px) {
   .title-nav {
     display: inline;
   }
@@ -65,5 +65,47 @@
   .container-fluid {
     height: 100vh;
     min-width: 280px;
+  }
+}
+
+@media screen and (max-width: 550px) {
+  .navbar {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    height: 70px;
+    z-index: 1000; // Assicura che la navbar sia sovrapposta a eventuali altri elementi nella parte inferiore della pagina
+  }
+
+  .container-fluid {
+    height: auto; // Imposta l'altezza automaticamente per adattarsi ai contenuti
+    padding: 0;
+  }
+
+  .flex-column {
+    flex-direction: row !important; // Imposta la direzione dei figli della navbar come riga
+    justify-content: space-evenly; // Distribuisci uniformemente i figli lungo la navbar con spaziatura equa
+    align-items: center; // Allinea i figli verticalmente al centro
+    flex-grow: 1;
+    .nav-link {
+      font-size: 22px; // Riduci la dimensione del testo per adattarsi a schermi più piccoli
+    }
+  }
+
+  .title-nav {
+    display: none; // Nascondi il testo del titolo della navbar
+  }
+
+  .logo-1 {
+    display: none; // Nascondi il logo principale
+  }
+
+  .logo-2 {
+    display: none; // Nascondi il logo secondario
+  }
+
+  #logout {
+    font-size: 22px; // Imposta la dimensione del pulsante di logout
+    color: red;
   }
 }
