--- a/FrontEnd-FitWell/src/app/components/nav-bar/nav-bar.component.html
+++ b/FrontEnd-FitWell/src/app/components/nav-bar/nav-bar.component.html
@@ -23,7 +23,7 @@
             class="navbar-nav w-100 d-flex flex-column align-content-between justify-content-between"
           >
             <div
-              class="d-flex flex-column py-5 gap-3 align-items-center align-items-md-start"
+              class="d-flex flex-column py-5 gap-3 align-items-center align-items-lg-start"
             >
               <li class="nav-item" *ngIf="user">
                 <a
@@ -97,7 +97,7 @@
                 </a>
               </li>
             </div>
-            <div>
+            <div id="out">
               <li class="nav-item" *ngIf="user">
                 <button class="btn text-dark m-0 p-2" (click)="logout()">
                   <i
