--- a/FrontEnd-FitWell/src/app/components/card-coach/card-coach.component.scss
+++ b/FrontEnd-FitWell/src/app/components/card-coach/card-coach.component.scss
@@ -1,5 +1,13 @@
 #page{
     background-color: #f1f8fa;
-    height: 100vh;
+    min-height: 100vh;
     width: 100%;
+    #addCard{
+        position: sticky;
+        top: 0;
+        z-index: 99;
+        button{
+         background-color: rgb(0, 255, 64);
+        }
+    }
 }
