--- a/FrontEnd-FitWell/src/app/components/details-card/details-card.component.scss
+++ b/FrontEnd-FitWell/src/app/components/details-card/details-card.component.scss
@@ -1,6 +1,18 @@
 #page{
     background-color: #f1f8fa;
-    height: 100vh;
+    min-height: 100vh;
     width: 100%;
+    #head{
+        button{
+            background-color: rgb(0, 255, 64);
+            color:black;
+        }
+        .timer{
+            cursor: pointer;
+        }
+    }
 
+    .card{
+        cursor: pointer;
+    }
 }
