--- a/FrontEnd-FitWell/src/app/components/details-exercise/details-exercise.component.html
+++ b/FrontEnd-FitWell/src/app/components/details-exercise/details-exercise.component.html
@@ -1,22 +1,32 @@
-<div class="conteiner-fluid position-relative" id="page">
-  <h2 (click)="Timer(card.restTimer)">{{timerValue}}</h2>
-    <ul class="list-group">
-        <li class="list-group-item"  *ngFor="let set of workout?.sets">
-            <div class="d-flex justify-content-between">
-                <p>Rep:{{ set.rep }}</p>
-                <p>Weight:{{set.weight}}</p>
-            </div>
-            </li>
-      </ul>
+<div class="conteiner-fluid" id="page">
+  <div
+    class="d-flex justify-content-end align-content-center pt-3 px-3 mb-2"
+    id="head"
+  >
+    <div>
+      <h2 (click)="Timer(card.restTimer)" class="m-0 timer">
+        {{ timerValue }}
+      </h2>
+    </div>
+  </div>
+  <div class="row m-0 justify-content-center">
+    <ul class="list-group p-2">
+      <li class="list-group-item" *ngFor="let set of workout?.sets">
+        <div class="d-flex justify-content-between align-content-center">
+          <p class="m-0">Rep:{{ set.rep }}</p>
+          <p class="m-0">Weight:{{ set.weight | number : "1.2-2" }}</p>
+        </div>
+      </li>
+    </ul>
+  </div>
 
-      <div class="container-fluid mx-0 mt-3 pb-4" id="stats">
-        <div class="row justify-content-around">
-          <div class="col-8" id="workout">
-            <div>
-              <canvas id="statsWorkout" class="m-3"></canvas>
-            </div>
-          </div>
+  <div class="container-fluid mx-0 mt-3 p-4" id="stats">
+    <div class="row justify-content-around">
+      <div class="col-sm-11 col-lg-5" id="workout">
+        <div>
+          <canvas id="statsWorkout" class="m-3"></canvas>
         </div>
       </div>
+    </div>
+  </div>
 </div>
-
