--- a/FrontEnd-FitWell/src/app/components/diet/diet.component.scss
+++ b/FrontEnd-FitWell/src/app/components/diet/diet.component.scss
@@ -1,5 +1,14 @@
 #page{
     background-color: #f1f8fa;
-    height: 100vh;
+    min-height: 100vh;
     width: 100%;
+    #addDiet{
+        position: sticky;
+        top: 0;
+        z-index: 99;
+        button{
+            background-color: rgb(0, 255, 64);;
+        }
+        
+    }
 }
