--- a/FrontEnd-FitWell/src/app/components/nav-bar/nav-bar.component.scss
+++ b/FrontEnd-FitWell/src/app/components/nav-bar/nav-bar.component.scss
@@ -43,7 +43,7 @@
   display: none;
 }
 
-@media screen and (min-width: 900px) {
+@media screen and (min-width: 991px) {
   .title-nav {
     display: inline;
   }
@@ -69,43 +69,48 @@
 }
 
 @media screen and (max-width: 550px) {
+
+  ul{
+    height: 70px !important;
+    
+  }
+
   .navbar {
     position: fixed;
     bottom: 0;
     width: 100%;
     height: 70px;
-    z-index: 1000; // Assicura che la navbar sia sovrapposta a eventuali altri elementi nella parte inferiore della pagina
+    z-index: 1000; 
   }
 
   .container-fluid {
-    height: auto; // Imposta l'altezza automaticamente per adattarsi ai contenuti
+    height: auto;
     padding: 0;
   }
 
   .flex-column {
-    flex-direction: row !important; // Imposta la direzione dei figli della navbar come riga
-    justify-content: space-evenly; // Distribuisci uniformemente i figli lungo la navbar con spaziatura equa
-    align-items: center; // Allinea i figli verticalmente al centro
+    flex-direction: row !important; 
+    justify-content: space-evenly; 
+    align-items: center; 
     flex-grow: 1;
     .nav-link {
-      font-size: 22px; // Riduci la dimensione del testo per adattarsi a schermi più piccoli
+      font-size: 22px; 
     }
   }
 
   .title-nav {
-    display: none; // Nascondi il testo del titolo della navbar
+    display: none; 
   }
 
   .logo-1 {
-    display: none; // Nascondi il logo principale
+    display: none; 
   }
 
   .logo-2 {
-    display: none; // Nascondi il logo secondario
+    display: none;
   }
 
-  #logout {
-    font-size: 22px; // Imposta la dimensione del pulsante di logout
-    color: red;
+  #out{
+    display: none;
   }
 }
