--- a/FrontEnd-FitWell/src/app/components/workout/workout.component.html
+++ b/FrontEnd-FitWell/src/app/components/workout/workout.component.html
@@ -24,10 +24,10 @@
         </option>
       </select>
       <div class="accordion mb-3" id="Set" *ngIf="!id;else templateName">
-        <div class="accordion-item" *ngFor="let panel of panels; let i = index">
+        <div class="accordion-item text-bg-dark" *ngFor="let panel of panels; let i = index">
           <h2 class="accordion-header">
             <button
-              class="accordion-button"
+              class="accordion-button text-bg-dark"
               type="button"
               data-bs-toggle="collapse"
               [attr.data-bs-target]="'#Setcollapse' + i"
@@ -52,7 +52,7 @@
       </div>
       <button
         type="button"
-        class="btn btn-outline-light"
+        class="btn btn-outline-light mt-2"
         (click)="addPanel()"
         *ngIf="!id"
       >
@@ -60,15 +60,15 @@
       </button>
       <button
         type="button"
-        class="btn btn-outline-light"
+        class="btn btn-outline-light mt-2"
         (click)="addSet()"
         *ngIf="id"
       >
         Add Set
       </button>
     </div>
-    <button type="submit" class="btn btn-success" *ngIf="!id || cardByParent.workouts[cardByParent.workouts.length - 1].id == '0' && cardByParent.workouts.length - 1 === index">Confirm</button>
-    <button type="button" class="btn btn-info" (click)="modWorkout()" *ngIf="id">Mod workout</button>
+    <button type="submit" class="btn btn-success" *ngIf="!id || cardByParent.workouts[cardByParent.workouts.length - 1].id == '0' && cardByParent.workouts.length - 1 === index" data-bs-dismiss="modal">Confirm</button>
+    <button type="button" class="btn btn-info" (click)="modWorkout()" *ngIf="id" data-bs-dismiss="modal">Mod workout</button>
   </form>
 </div>
 
