--- a/FrontEnd-FitWell/src/app/components/workouts/workouts.component.scss
+++ b/FrontEnd-FitWell/src/app/components/workouts/workouts.component.scss
@@ -1,10 +1,14 @@
 #page{
     background-color: #f1f8fa;
-    height: 100vh;
+    min-height: 100vh;
     width: 100%;
 
     #addCard{
-        bottom: 40px;
-        right: 50px;
+        position: sticky;
+        top: 0;
+        z-index: 99;
+        button{
+         background-color: rgb(0, 255, 64);
+        }
     }
 }
