--- a/FrontEnd-FitWell/src/app/components/diet/diet.component.html
+++ b/FrontEnd-FitWell/src/app/components/diet/diet.component.html
@@ -11,11 +11,21 @@
     <div class="row m-0">
       <div class="col-md-6 col-xxl-2 mb-2" *ngFor="let item of MyDiet">
         <div class="card text-bg-dark">
+          <div class="card-header pb-0">
+            <div class="d-flex justify-content-between align-items-center mb-2">
+              <div (click)="changePage(item.id)">
+                <h5 class="card-title">Diet</h5>
+                <h6 class="card-subtitle mb-2">
+                  Total calories: {{ item.totalCalories }}
+                </h6>
+                <h6 class="card-subtitle" *ngIf="item.nutritionist">
+                  {{ item.nutritionist.name}} {{item.nutritionist.surname}}
+                </h6>
+              </div>
+              <button type="button" class="btn btn-outline-danger" *ngIf="!item.nutritionist"><i class="bi bi-trash"></i></button>
+            </div>
+          </div>
           <div class="card-body" (click)="changePage(item.id)">
-            <h5 class="card-title">Diet</h5>
-            <h6 class="card-subtitle mb-2 text-body-secondary">
-             Total calories: {{ item.totalCalories }}
-            </h6>
             <ul class="list-group" >
               <li class="list-group-item" *ngFor="let recipe of item.recipes">{{ recipe.name }}</li>
             </ul>
