--- a/FrontEnd-FitWell/src/app/components/workouts/workouts.component.html
+++ b/FrontEnd-FitWell/src/app/components/workouts/workouts.component.html
@@ -28,15 +28,22 @@
 
   <div class="row m-0">
     <div class="col-md-6 col-xxl-2 mb-2" *ngFor="let item of cardWorkout; let last = last">
-      <div class="card text-bg-dark" (click)="changePage(item.id)" [ngStyle]="{'margin-bottom.px': last ? 75 : 0}">
-        <div class="card-body">
-          <h5 class="card-title">{{ item.name }}</h5>
-          <h6 class="card-subtitle mb-2">
-            <i class="bi bi-stopwatch"></i> {{ item.restTimer }}
-          </h6>
-          <h6 class="card-subtitle mb-2 " *ngIf="item.coach">
-            {{ item.coach.name }} {{ item.coach.surname }}
-          </h6>
+      <div class="card text-bg-dark" [ngStyle]="{'margin-bottom.px': last ? 75 : 0}">
+        <div class="card-header pb-0">
+          <div class="d-flex justify-content-between align-items-center mb-2">
+            <div class="flex-grow-1" (click)="changePage(item.id)">
+              <h5 class="card-title" >{{ item.name }}</h5>
+              <h6 class="card-subtitle mb-2">
+                <i class="bi bi-stopwatch"></i> {{ item.restTimer }}
+              </h6>
+              <h6 class="card-subtitle " *ngIf="item.coach">
+                {{ item.coach.name }} {{ item.coach.surname }}
+              </h6>
+            </div>
+            <button type="button" class="btn btn-outline-danger" (click)="deleteCard(item.id)" *ngIf="!item.coach"><i class="bi bi-trash"></i></button> 
+          </div>
+        </div>
+        <div class="card-body" (click)="changePage(item.id)">
           <ul class="list-group">
             <li class="list-group-item" *ngFor="let workout of item.workouts">{{ workout.exercise.name }}</li>
           </ul>
