--- a/FrontEnd-FitWell/src/app/components/workout/workout.component.html
+++ b/FrontEnd-FitWell/src/app/components/workout/workout.component.html
@@ -67,8 +67,8 @@
         Add Set
       </button>
     </div>
-    <button type="submit" class="btn btn-success" *ngIf="!id || cardByParent.workouts[cardByParent.workouts.length - 1].id == '0' && cardByParent.workouts.length - 1 === index" data-bs-dismiss="modal">Confirm</button>
-    <button type="button" class="btn btn-info" (click)="modWorkout()" *ngIf="id" data-bs-dismiss="modal">Mod workout</button>
+    <button type="submit" class="btn btn-success" *ngIf="!id || cardByParent.workouts[cardByParent.workouts.length - 1].id == '0' && cardByParent.workouts.length - 1 === index">Confirm</button>
+    <button type="button" class="btn btn-info" (click)="modWorkout()" *ngIf="id">Mod workout</button>
   </form>
 </div>
 
