--- a/FrontEnd-FitWell/src/app/components/diet-details/diet-details.component.scss
+++ b/FrontEnd-FitWell/src/app/components/diet-details/diet-details.component.scss
@@ -11,7 +11,6 @@
         }
     }
     #info{
-        margin-bottom: 75px;
         #nutrient{
             width: 300px;
             #Macro{
@@ -19,4 +18,10 @@
             }
         }
     }
+
+    @media screen and (max-width: 550px) {
+        #info{
+            margin-bottom: 72px;
+        }
+      }
 }
