--- a/FrontEnd-FitWell/src/app/components/diet/diet.component.html
+++ b/FrontEnd-FitWell/src/app/components/diet/diet.component.html
@@ -9,8 +9,8 @@
   </div>
   
     <div class="row m-0">
-      <div class="col-md-6 col-xxl-2 mb-2" *ngFor="let item of MyDiet">
-        <div class="card text-bg-dark">
+      <div class="col-md-6 col-xxl-2 mb-2" *ngFor="let item of MyDiet; let last = last">
+        <div class="card text-bg-dark" [ngStyle]="{'margin-bottom.px': last ? 75 : 0}">
           <div class="card-header pb-0">
             <div class="d-flex justify-content-between align-items-center mb-2">
               <div (click)="changePage(item.id)">
@@ -38,9 +38,9 @@
   <!-- Modal -->
   <div class="modal fade" id="DietRequest" tabindex="-1" aria-labelledby="DietRequestLabel" aria-hidden="true">
     <div class="modal-dialog">
-      <div class="modal-content">
+      <div class="modal-content text-bg-dark">
         <div class="modal-header">
-          <h1 class="modal-title fs-5" id="DietRequestLabel">Generate Diet</h1>
+          <h1 class="modal-title fs-5" id="DietRequestLabel">Request Diet</h1>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
@@ -149,7 +149,7 @@
                     </select>
                   </div>
                   <div class="modal-footer">
-                    <button type="submit" class="btn btn-primary">Generate</button>
+                    <button type="submit" class="btn btn-success">Request Diet</button>
                   </div>
             </form>
         </div>
@@ -160,7 +160,7 @@
 
   <div class="modal fade" id="DietGenerate" tabindex="-1" aria-labelledby="DietGenerateLabel" aria-hidden="true">
     <div class="modal-dialog">
-      <div class="modal-content">
+      <div class="modal-content text-bg-dark">
         <div class="modal-header">
           <h1 class="modal-title fs-5" id="DietGenerateLabel">Generate Diet</h1>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
@@ -255,7 +255,7 @@
                       </select>
                   </div>
                   <div class="modal-footer">
-                    <button type="submit" class="btn btn-primary">Generate</button>
+                    <button type="submit" class="btn btn-success">Generate</button>
                   </div>
             </form>
         </div>
