--- a/FrontEnd-FitWell/src/styles.scss
+++ b/FrontEnd-FitWell/src/styles.scss
@@ -10,3 +10,20 @@
 body{
     font-family: sans-serif;
 }
+
+html::-webkit-scrollbar{
+    width: 20px;
+}
+html::-webkit-scrollbar-track{
+    background-color: #f1f8fa;
+}
+html::-webkit-scrollbar-thumb{
+    background-color:  #1e1e21;
+    border-radius: 10px;
+}
+
+@media screen and (max-width: 991px) {
+    html::-webkit-scrollbar{
+        width: 0px;
+    }
+  }
